[tool.poetry]
name = "quantile-regression"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.21.0"
elegy = "^0.7.4"
typer = "^0.3.2"
matplotlib = "^3.4.2"
debugpy = "^1.3.0"
pandas = "<1.3"
streambook = "^0.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
