[tool.poetry]
name = "quantile-regression"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.21.0"
elegy = "^0.7.4"
matplotlib = "^3.4.2"
pandas = "<1.3"

[tool.poetry.dev-dependencies]
streambook = "^0.2"
debugpy = "^1.4.1"
jupyterlab = "<3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
